--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <center>
 <body>
 
+<h1 style="font-family: 'Cookie', cursive; font-size: 64px; color:#DF691A"> Welcome to EventBright Design !</h1>
+
 <a href=navbar.html>Navbar</a> </br>
 <a href=footer.html>Footer</a> </br>
 <a href=banniere.html>Banner 1</a>  </br>
@@ -23,6 +25,7 @@
 <a href=cardusers.html>Users Attending Cards</a>   </br> 
 <a href=comments.html>Comments</a></br>
 <a href=form.html> Form</a></br>
+<a href=show.html> Show</a></br>
 <a href=list.html> List</a></br>
 
 </body>
